--- a/assets/styles/scss/abstracts/mixins/_responsive-font-sizes.scss
+++ b/assets/styles/scss/abstracts/mixins/_responsive-font-sizes.scss
@@ -16,3 +16,8 @@
     #{if($min-value > $max-value, $min-value, $max-value)}
   );
 }
+
+// -  <---------------| Text-Rendering |--------------->
+@mixin text-rendering-mode($mode) {
+  text-rendering: $mode;
+}
