--- a/assets/styles/scss/base/_root.scss
+++ b/assets/styles/scss/base/_root.scss
@@ -33,6 +33,8 @@ body {
 
   // # Lifesaving Scrollbar hack!
   overflow-x: hidden;
+
+  @include text-rendering-mode(optimizeLegibility);
 }
 
 // #  <---------------| <main> |--------------->
