--- a/assets/styles/scss/base/_block-text.scss
+++ b/assets/styles/scss/base/_block-text.scss
@@ -67,9 +67,24 @@
 }
 
 // #  <---------------| <p> |--------------->
- {
+p {
+  padding: $buffer--xs 0;
+  color: var(--color-foreground);
+  font-family: $font-family--text;
+  font-size: $font-size--1;
+  font-variant: $font-variant--text;
+  font-weight: $font-weight--text;
+  letter-spacing: $letter-spacing--text;
+  line-height: $line-height--text;
+  text-align: $text-align--text;
+  text-transform: $text-transform--text;
 }
 
 // #  <---------------| <pre> |--------------->
- {
+pre {
+  & > code {
+    padding: $buffer--s;
+    display: block;
+    overflow-x: auto;
+  }
 }
