--- a/assets/styles/scss/base/_multimedia.scss
+++ b/assets/styles/scss/base/_multimedia.scss
@@ -55,7 +55,8 @@ picture {
 }
 
 // #  <---------------| <video> |--------------->
- {
+video {
+  @include box-dimensions;
 }
 
 /* -------------------------------------------------------------------------- *\
