--- a/assets/styles/scss/base/_forms.scss
+++ b/assets/styles/scss/base/_forms.scss
@@ -74,16 +74,39 @@ select {
 // #  <---------------| <button> |--------------->
 button {
   @include click-transition--small;
+  @include flex-container;
 
-  color: var(--form-text);
+  position: relative;
+  top: 0;
+  padding: $buffer--xs;
+  border-top: 1px solid lightness(var(--color-tertiary), 1.22);
+  border-bottom: 1px solid lightness(var(--color-tertiary), 1.2);
+  margin-bottom: $buffer--s;
+  margin-left: $buffer--s;
+  background: linear-gradient(
+    to bottom,
+    adjust-hsl(var(--color-tertiary), 1, 1.35, 1.15) 0%,
+    adjust-hsl(var(--color-tertiary), 1, 1.15, 1.12) 26%,
+    adjust-hsl(var(--color-tertiary), 1, 1, 1) 100%
+  );
+  border-radius: $small-dimension--s;
+  color: lightness(var(--color-secondary), 0.9);
+  text-shadow: 0 -2px 0 lightness(var(--color-secondary), 0.8),
+    0 1px 1px lightness(var(--color-secondary), 1.2);
+  transition: all ($button--speed + s) $button--timing-function;
+
+  &:visited {
+    color: lightness(var(--color-tertiary), 0.9);
+  }
+
+  &:first-of-type {
+    margin-left: 0;
+  }
+
   background-color: var(--background);
-  font-family: inherit;
-  font-size: inherit;
-  margin-right: 6px;
-  margin-bottom: 6px;
-  padding: 10px;
+
   border: none;
-  border-radius: 6px;
+
   outline: none;
 
   &:focus {
@@ -93,6 +116,59 @@ button {
   &:disabled {
     cursor: not-allowed;
     opacity: 0.5;
+  }
+
+  font-family: $font-family--link;
+  font-size: $font-size--2;
+  font-variant: $font-variant--link;
+  font-weight: $font-weight--link;
+  letter-spacing: $letter-spacing--link;
+  text-align: $line-height--link;
+  text-decoration: none;
+  text-transform: $text-transform--link;
+
+  &:hover {
+    color: var(--color-secondary);
+    background: linear-gradient(
+      to bottom,
+      adjust-hsl(var(--color-tertiary), 1, 1.35, 1.22) 0%,
+      adjust-hsl(var(--color-tertiary), 1, 1.15, 1.19) 26%,
+      adjust-hsl(var(--color-tertiary), 1, 1, 1.07) 100%
+    );
+  }
+
+  &:active {
+    top: $button--depth + px;
+    color: lightness(var(--color-secondary), 1.45);
+
+    // &::before {
+    //   top: 0;
+    //   box-shadow: $button--box-shadow---active;
+    // }
+  }
+
+  &::before {
+    position: absolute;
+    z-index: -1;
+    top: ($button--depth) + px;
+    right: 0;
+    left: 0;
+    display: inline-flex;
+    height: $button--height;
+    background: linear-gradient(
+      to top,
+      adjust-hsl(var(--color-secondary), 1, 1.15, 0.6) 0%,
+      adjust-hsl(var(--color-secondary), 1, 1.1, 0.75) $button--depth + px
+    );
+    border-radius: $small-dimension--s;
+    box-shadow: $button--box-shadow---before;
+    content: '';
+    transition: all (($button--speed * 1.3) + s) $button--timing-function;
+  }
+
+  i {
+    margin-right: $buffer--s;
+    text-align: center;
   }
 }
 
@@ -145,6 +221,32 @@ input {
   }
 
   &[type='range'] {
+    margin: 10px 0;
+    padding: 10px 0;
+    background: transparent;
+
+    &::-webkit-slider-runnable-track {
+      width: 100%;
+      height: 9.5px;
+      transition: 0.2s;
+      background: var(--background);
+      border-radius: 3px;
+    }
+
+    &:focus::-webkit-slider-runnable-track {
+      background: var(--background);
+    }
+
+    &::-webkit-slider-thumb {
+      box-shadow: 0 1px 1px #000, 0 0 1px #0d0d0d;
+      height: 20px;
+      width: 20px;
+      border-radius: 50%;
+      background: var(--border);
+      -webkit-appearance: none;
+      margin-top: -7px;
+    }
+
     &:active {
       transform: translateY(2px);
     }
