--- a/assets/styles/scss/base/_interactive.scss
+++ b/assets/styles/scss/base/_interactive.scss
@@ -3,11 +3,49 @@
 \* -------------------------------------------------------------------------- */
 
 // #  <---------------| <details> |--------------->
- {
-}
+details {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  background-color: var(--background-alt);
+  padding: 10px 10px 0;
+  margin: 1em 0;
+  border-radius: 6px;
+  overflow: hidden;
 
+  &[open] {
+    padding: 10px;
+  }
+
+  > :last-child {
+    margin-bottom: 0;
+  }
+
+  &[open] summary {
+    margin-bottom: 10px;
+  }
+}
 // #  <---------------| <dialog> |--------------->
- {
+dialog {
+  background-color: var(--background-alt);
+  color: var(--text-main);
+  border: none;
+  border-radius: 6px;
+  border-color: var(--border);
+  padding: 10px 30px;
+
+  & > header:first-child {
+    background-color: var(--background);
+    border-radius: 6px 6px 0 0;
+    margin: -10px -30px 10px;
+    padding: 10px;
+    text-align: center;
+  }
+
+  &::backdrop {
+    background: #0000009c;
+    backdrop-filter: blur(4px);
+  }
 }
 
 // #  <---------------| <menu> |--------------->
