--- a/assets/styles/scss/base/_sectioning.scss
+++ b/assets/styles/scss/base/_sectioning.scss
@@ -41,4 +41,7 @@ header {
 // #  <---------------| <footer> |--------------->
 footer {
   padding: $buffer--s;
+
+  border-top: 1px solid var(--border);
+  padding-top: 10px;
 }
