development-main: the great style merge v1

--- a/assets/styles/css/examples.css
+++ b/assets/styles/css/examples.css
@@ -4,4 +4,7 @@
 /* -------------------------------------------------------------------------- *\
 *  <<--------------------<<  >>-------------------->>
 \* -------------------------------------------------------------------------- */
+/* -------------------------------------------------------------------------- *\
+// -  <<--------------------<<  >>-------------------->>
+\* -------------------------------------------------------------------------- */
 /*# sourceMappingURL=examples.css.map */
