--- a/assets/styles/scss/base/_table.scss
+++ b/assets/styles/scss/base/_table.scss
@@ -34,7 +34,7 @@ tbody {
   }
 
   tr:nth-child(even) button:hover {
-    background-color: var(--background-body);
+    background-color: var(--color-background);
   }
 }
 
@@ -44,24 +44,16 @@ tfoot {
 }
 
 // #  <---------------| <colgroup> |--------------->
- {
-}
 
 // #  <---------------| <tr> |--------------->
- {
-}
 
 /* -------------------------------------------------------------------------- *\
 // -  <<--------------------<< CHILDREN >>-------------------->>
 \* -------------------------------------------------------------------------- */
 
 // #  <---------------| <caption> |--------------->
- {
-}
 
 // #  <---------------| <col> |--------------->
- {
-}
 
 // #  <---------------| <th> |--------------->
 th {
@@ -79,5 +71,4 @@ td {
   text-align: left;
   vertical-align: top;
   word-wrap: break-word;
-  padding: 6px;
 }
