--- a/assets/styles/scss/main.scss
+++ b/assets/styles/scss/main.scss
@@ -52,5 +52,5 @@
 /* ========================================================================== *\
 +  PARTIAL SCSS GROUP 7 - `themes/`
 \* ========================================================================== */
-@import 'themes/light--v1';
-@import 'themes/light--v2';
+// @import 'themes/light--v1';
+// @import 'themes/light--v2';
