--- a/assets/styles/scss/abstracts/_functions.scss
+++ b/assets/styles/scss/abstracts/_functions.scss
@@ -8,3 +8,5 @@
 @import 'functions/adjust-hsl';
 @import 'functions/adjust-hsla';
 @import 'functions/str-replace';
+@import 'functions/shade';
+@import 'functions/tint';
