--- a/assets/styles/scss/abstracts/mixins/_define-color-hsl.scss
+++ b/assets/styles/scss/abstracts/mixins/_define-color-hsl.scss
@@ -3,10 +3,21 @@
 // -----------------------------------------------------------------------------
 
 // -  <---------------| Define-Color-Hsl |--------------->
-@mixin define-color-hsl($color, $hue, $saturation, $lightness) {
-  /* Color-Group */
-  #{$color}: unquote('hsl(#{$hue}, #{$saturation}, #{$lightness})');
-  #{$color}-h: #{$hue};
-  #{$color}-s: #{$saturation};
-  #{$color}-l: #{$lightness};
+@mixin define-color-hsl($variants, $color, $hue, $saturate, $lightness) {
+  /* #  <---------------| #{$color}: Group |---------------> */
+  #{$color}--hue: #{$hue};
+  #{$color}--saturation: #{$saturate};
+  #{$color}--lightness: #{$lightness};
+
+  @if $variants == true {
+    #{$color}--lightest: tint(hsl($hue, $saturate, $lightness), 30%);
+    #{$color}--lighter: tint(hsl($hue, $saturate, $lightness), 20%);
+    #{$color}--light: tint(hsl($hue, $saturate, $lightness), 10%);
+    #{$color}: tint(hsl($hue, $saturate, $lightness), 0%);
+    #{$color}--dark: shade(hsl($hue, $saturate, $lightness), 10%);
+    #{$color}--darker: shade(hsl($hue, $saturate, $lightness), 20%);
+    #{$color}--darkest: shade(hsl($hue, $saturate, $lightness), 30%);
+  } @else {
+    #{$color}: tint(hsl($hue, $saturate, $lightness), 0%);
+  }
 }
