--- a/assets/styles/scss/abstracts/themes/_light--v1.scss
+++ b/assets/styles/scss/abstracts/themes/_light--v1.scss
@@ -20,17 +20,17 @@
   /* #  Main */
 
   // #0f0e0e
-  @include define-color-hsl(--color-foreground, 0, 3.4%, 5.7%);
+  @include define-color-hsl(false, --color-foreground, 0, 3.4%, 5.7%);
 
   // #f7f5f5
-  @include define-color-hsl(--color-background, 0, 11.1%, 96.5%);
+  @include define-color-hsl(false, --color-background, 0, 11.1%, 96.5%);
 
   // #132636
-  @include define-color-hsl(--color-primary, 207.4, 47.9%, 14.3%);
+  @include define-color-hsl(true, --color-primary, 207.4, 47.9%, 14.3%);
 
   // #b0c4de
-  @include define-color-hsl(--color-secondary, 213.9, 41.1%, 78%);
+  @include define-color-hsl(true, --color-secondary, 213.9, 41.1%, 78%);
 
   // #c8ac7f
-  @include define-color-hsl(--color-tertiary, 37, 39.9%, 64.1%);
+  @include define-color-hsl(true, --color-tertiary, 37, 39.9%, 64.1%);
 }
