--- a/assets/styles/scss/abstracts/mixins/_transitions.scss
+++ b/assets/styles/scss/abstracts/mixins/_transitions.scss
@@ -4,7 +4,7 @@
 
 // *  <<--------------------<< GENERIC >>-------------------->>
 
-// -  <---------------| General Transition |--------------->
+// -  <---------------| General-Transition |--------------->
 @mixin general-transition(
   $property: all,
   $duration: 0.25s,
