--- a/assets/styles/scss/base/_root.scss
+++ b/assets/styles/scss/base/_root.scss
@@ -13,10 +13,10 @@
 
 // #  <---------------| <html> |--------------->
 html {
-  @include fluid-type(40rem, 60rem, 1rem, 1.5rem);
+  @include font-sizes--responsive(40rem, 60rem, 1rem, 1.5rem);
   @include scrollbar-style(
-    calc(#{$buffer--s} + #{$buffer--xs}),
-    var(--color-tertiary)
+    $size: calc(#{$buffer--s} + #{$buffer--xs}),
+    $color: var(--color-tertiary)
   );
   @include scrollbar-function(smooth, y proximity);
 }
@@ -34,7 +34,7 @@ body {
   // # Lifesaving Scrollbar hack!
   overflow-x: hidden;
 
-  @include text-rendering-mode(optimizeLegibility);
+  @include text-rendering(optimizeLegibility);
 }
 
 // #  <---------------| <main> |--------------->
