development-main: old friendly errors fixed

--- a/assets/styles/scss/themes/_light--v2.scss
+++ b/assets/styles/scss/themes/_light--v2.scss
@@ -20,8 +20,8 @@
   --bg-color--transparant---harder: hsla(0, 0%, 100%, 0.8);
   --bg-color--transparant---hardest: hsla(0, 0%, 100%, 0.95);
 
-  // --selection: #9e9e9e;
-  // --text-main: #363636;
+  --selection: #9e9e9e;
+  --text-main: #363636;
   --text-bright: #000;
   --text-muted: #70777f;
   --links: #0076d1;
@@ -34,7 +34,7 @@
   --form-text: #000;
   --variable: #39a33c;
   --highlight: #ff0;
-  --select-arrow: svg-load('./assets/select-arrow.svg', fill: #161f27);
+  // --select-arrow: svg-load('./assets/select-arrow.svg', fill: #161f27);
 
   /* ------------------------------------------------------------------------ *\
 // -  <<--------------------<< REGULAR COLORS >>-------------------->>
