--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -806,6 +806,7 @@ select {
   margin-right: 6px;
   margin-bottom: 6px;
   padding: 10px;
+  padding-right: 35px;
   border: none;
   border-radius: 6px;
   outline: none;
@@ -827,6 +828,10 @@ select:focus {
           box-shadow: 0 0 0 2px var(--focus);
 }
 
+select:hover {
+  background: var(--button-hover);
+}
+
 select:not([type='checkbox']):not([type='radio']) {
   display: block;
 }
@@ -840,47 +845,18 @@ button {
   transition: background-color var(--animation-duration) linear, border-color var(--animation-duration) linear, color var(--animation-duration) linear, box-shadow var(--animation-duration) linear, transform var(--animation-duration) ease;
   transition: background-color var(--animation-duration) linear, border-color var(--animation-duration) linear, color var(--animation-duration) linear, box-shadow var(--animation-duration) linear, transform var(--animation-duration) ease, -webkit-box-shadow var(--animation-duration) linear, -webkit-transform var(--animation-duration) ease;
   cursor: pointer;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -ms-flex-wrap: nowrap;
-      flex-wrap: nowrap;
-  place-content: space-evenly;
-  place-items: stretch;
-  position: relative;
-  top: 0;
-  padding: 0.25rem;
-  border-top: 1px solid hsl(var(--color-tertiary-h), var(--color-tertiary-s), calc(var(--color-tertiary-l) * 1.22));
-  border-bottom: 1px solid hsl(var(--color-tertiary-h), var(--color-tertiary-s), calc(var(--color-tertiary-l) * 1.2));
-  margin-bottom: 0.5rem;
-  margin-left: 0.5rem;
-  background: -webkit-gradient(linear, left top, left bottom, from(hsl(calc(var(--color-tertiary-h) * 1), calc(var(--color-tertiary-s) * 1.35), calc(var(--color-tertiary-l) * 1.15))), color-stop(26%, hsl(calc(var(--color-tertiary-h) * 1), calc(var(--color-tertiary-s) * 1.15), calc(var(--color-tertiary-l) * 1.12))), to(hsl(calc(var(--color-tertiary-h) * 1), calc(var(--color-tertiary-s) * 1), calc(var(--color-tertiary-l) * 1))));
-  background: linear-gradient(to bottom, hsl(calc(var(--color-tertiary-h) * 1), calc(var(--color-tertiary-s) * 1.35), calc(var(--color-tertiary-l) * 1.15)) 0%, hsl(calc(var(--color-tertiary-h) * 1), calc(var(--color-tertiary-s) * 1.15), calc(var(--color-tertiary-l) * 1.12)) 26%, hsl(calc(var(--color-tertiary-h) * 1), calc(var(--color-tertiary-s) * 1), calc(var(--color-tertiary-l) * 1)) 100%);
-  border-radius: 8px;
-  color: hsl(var(--color-secondary-h), var(--color-secondary-s), calc(var(--color-secondary-l) * 0.9));
-  text-shadow: 0 -2px 0 hsl(var(--color-secondary-h), var(--color-secondary-s), calc(var(--color-secondary-l) * 0.8)), 0 1px 1px hsl(var(--color-secondary-h), var(--color-secondary-s), calc(var(--color-secondary-l) * 1.2));
-  -webkit-transition: all 0.06s ease-out;
-  transition: all 0.06s ease-out;
-  font-family: "Montserrat", monospace;
-  font-size: 1.25rem;
-  font-variant: normal;
-  font-weight: 400;
-  letter-spacing: normal;
-  text-align: 1.5;
-  text-decoration: none;
-  text-transform: none;
-}
-
-button:visited {
-  color: hsl(var(--color-tertiary-h), var(--color-tertiary-s), calc(var(--color-tertiary-l) * 0.9));
-}
-
-button:first-of-type {
-  margin-left: 0;
+  color: var(--form-text);
+  background-color: var(--background);
+  font-family: inherit;
+  font-size: inherit;
+  margin-right: 6px;
+  margin-bottom: 6px;
+  padding: 10px;
+  padding-right: 30px;
+  padding-left: 30px;
+  border: none;
+  border-radius: 6px;
+  outline: none;
 }
 
 button:focus {
@@ -888,50 +864,29 @@ button:focus {
           box-shadow: 0 0 0 2px var(--focus);
 }
 
+button:hover {
+  background: var(--button-hover);
+}
+
+button::-webkit-input-placeholder {
+  color: var(--form-placeholder);
+}
+
+button:-ms-input-placeholder {
+  color: var(--form-placeholder);
+}
+
+button::-ms-input-placeholder {
+  color: var(--form-placeholder);
+}
+
+button::placeholder {
+  color: var(--form-placeholder);
+}
+
 button:disabled {
   cursor: not-allowed;
   opacity: 0.5;
-}
-
-button:hover {
-  color: var(--color-secondary);
-  background: -webkit-gradient(linear, left top, left bottom, from(hsl(calc(var(--color-tertiary-h) * 1), calc(var(--color-tertiary-s) * 1.35), calc(var(--color-tertiary-l) * 1.22))), color-stop(26%, hsl(calc(var(--color-tertiary-h) * 1), calc(var(--color-tertiary-s) * 1.15), calc(var(--color-tertiary-l) * 1.19))), to(hsl(calc(var(--color-tertiary-h) * 1), calc(var(--color-tertiary-s) * 1), calc(var(--color-tertiary-l) * 1.07))));
-  background: linear-gradient(to bottom, hsl(calc(var(--color-tertiary-h) * 1), calc(var(--color-tertiary-s) * 1.35), calc(var(--color-tertiary-l) * 1.22)) 0%, hsl(calc(var(--color-tertiary-h) * 1), calc(var(--color-tertiary-s) * 1.15), calc(var(--color-tertiary-l) * 1.19)) 26%, hsl(calc(var(--color-tertiary-h) * 1), calc(var(--color-tertiary-s) * 1), calc(var(--color-tertiary-l) * 1.07)) 100%);
-}
-
-button:active {
-  top: 6px;
-  color: hsl(var(--color-secondary-h), var(--color-secondary-s), calc(var(--color-secondary-l) * 1.45));
-}
-
-button:active::before {
-  top: 0;
-  -webkit-box-shadow: 0 3px 3px rgba(0, 0, 0, 0.7), 0 3px 9px rgba(0, 0, 0, 0.2);
-          box-shadow: 0 3px 3px rgba(0, 0, 0, 0.7), 0 3px 9px rgba(0, 0, 0, 0.2);
-}
-
-button::before {
-  position: absolute;
-  z-index: -1;
-  top: 6px;
-  right: 0;
-  left: 0;
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  height: 2rem;
-  background: linear-gradient(to top, hsl(calc(var(--color-secondary-h) * 1), calc(var(--color-secondary-s) * 1.15), calc(var(--color-secondary-l) * 0.6)) 0%, hsl(calc(var(--color-secondary-h) * 1), calc(var(--color-secondary-s) * 1.1), calc(var(--color-secondary-l) * 0.75)) 6px);
-  border-radius: 8px;
-  -webkit-box-shadow: 0 1px 0 2px rgba(0, 0, 0, 0.3), 0 5px 2.4px rgba(0, 0, 0, 0.5), 0 10.8px 9px rgba(0, 0, 0, 0.2);
-          box-shadow: 0 1px 0 2px rgba(0, 0, 0, 0.3), 0 5px 2.4px rgba(0, 0, 0, 0.5), 0 10.8px 9px rgba(0, 0, 0, 0.2);
-  content: '';
-  -webkit-transition: all 0.078s ease-out;
-  transition: all 0.078s ease-out;
-}
-
-button i {
-  margin-right: 0.5rem;
-  text-align: center;
 }
 
 input {
@@ -1052,6 +1007,10 @@ input:focus {
           box-shadow: 0 0 0 2px var(--focus);
 }
 
+input:hover {
+  background: var(--button-hover);
+}
+
 input:disabled {
   cursor: not-allowed;
   opacity: 0.5;
@@ -1085,6 +1044,8 @@ textarea {
   margin-right: 6px;
   margin-bottom: 6px;
   padding: 10px;
+  padding-right: 30px;
+  padding-left: 30px;
   border: none;
   border-radius: 6px;
   outline: none;
@@ -1094,6 +1055,10 @@ textarea {
 textarea:focus {
   -webkit-box-shadow: 0 0 0 2px var(--focus);
           box-shadow: 0 0 0 2px var(--focus);
+}
+
+textarea:hover {
+  background: var(--button-hover);
 }
 
 textarea::-webkit-input-placeholder {
@@ -1996,6 +1961,8 @@ input:checked + .slider::before {
   --bg-color--transparant---hard: hsla(0, 0%, 100%, 0.65);
   --bg-color--transparant---harder: hsla(0, 0%, 100%, 0.8);
   --bg-color--transparant---hardest: hsla(0, 0%, 100%, 0.95);
+  --selection: #9e9e9e;
+  --text-main: #363636;
   --text-bright: #000;
   --text-muted: #70777f;
   --links: #0076d1;
@@ -2008,7 +1975,6 @@ input:checked + .slider::before {
   --form-text: #000;
   --variable: #39a33c;
   --highlight: #ff0;
-  --select-arrow: svg-load('./assets/select-arrow.svg', fill: #161f27);
   /* ------------------------------------------------------------------------ *\
 // -  <<--------------------<< REGULAR COLORS >>-------------------->>
 \* -------------------------------------------------------------------------- */
